Improve report outline

--- a/report/report.tex
+++ b/report/report.tex
@@ -12,6 +12,7 @@
 \usepackage{lmodern}                      % same as above
 \usepackage{float}                        % makes figures STAY
 \usepackage{minted}                       % used for reading code from file
+\usepackage{url}                          % for urls in bibi
 
 \graphicspath{{images/}}
 
@@ -70,7 +71,7 @@
 
 \pagenumbering{arabic}
 
-\section{Motivation}
+\section{Introduction}
 
 \newpage
 
@@ -78,27 +79,32 @@
 
 \newpage
 
-\section{Procedure}
+\section{Literature Review}
+    \subsection{Could be a subsection of background, I think it would fit nicely there}
 
 \newpage
 
-\section{Problems Encountered}
+\section{Methodology}
+    \subsection{Procedure, etc...}
 
 \newpage
 
-\section{Testing}
-
-\newpage
-
-\section{Results}
-
-\newpage
-
-\section{Questions}
+\section{Results and Discussion}
+    \subsection{Might not need for first report.}
 
 \newpage
 
 \section{Conclusion}
+
+\newpage
+
+% REFERENCES
+\section{References}
+
+    \begin{thebibliography}{9}
+        \bibitem{fake}
+            Fake item. (2019, n.d.) \textit{TITLE OF ARTICLE} Retrieved from \url{www.butt.com}
+    \end{thebibliography}
 
 \newpage
 
