Add reference paper
It's a good paper. Might have additional papers to look at also.

--- a/report/report.tex
+++ b/report/report.tex
@@ -103,7 +103,9 @@
 
     \begin{thebibliography}{9}
         \bibitem{fake}
-            Fake item. (2019, n.d.) \textit{TITLE OF ARTICLE} Retrieved from \url{www.butt.com}
+            J. Siems, \textit{This Paper Rocks}, 2019. [Online]. Available: \url{josh.com/paper}. [Accessed: today].
+        \bibitem{sim_env}
+            M. Joselli, \textit{A Distributed Architecture for Simulation Environments Based on Game Engine Systems}, 2014. [Online]. Available: \url{https://www.springer.com/cda/content/document/cda_downloaddocument/9783642551307-c2.pdf?SGWID=0-0-45-1463314-p176712314}. [Accessed: 28-Feb-2019].
     \end{thebibliography}
 
 \newpage
