Complete midterm report

--- a/report/report.tex
+++ b/report/report.tex
@@ -42,7 +42,7 @@
 }
 
 %TITLE n such
-\title{Real-Time Systems used in Video Games}
+\title{Real-Time Systems in Video Games}
 \author{Joshua Siems}
 \date{\today}
 
@@ -71,71 +71,68 @@
 \section{Literature Review}
 
     \subsection{Video Games as Real-Time Systems}
-         A video game must process user inputs, update game variables and update the screen. This must all be completed in a very short amount of time in order to produce the illusion of movement to the user. See Figure \ref{update_cycle} for a simple example of a game loop.
+         The most basic video game must process user inputs, update game variables and update the screen. This must all be completed in a very short amount of time in order to produce the illusion of movement to the user. See Figure \ref{update_cycle} for a simple example of a game loop.
          \\
-         EDIT THIS IMAGE MAKE IT SMALLER
 
         \begin{figure}[H]
-            \includegraphics[width=12cm]{game_loop_simple.png}
+            \includegraphics[width=4cm]{game_loop_simple.png}
             \centering
-            \caption{Simple Game Loop}
+            \caption{Simple game loop.}
             \label{update_cycle}
         \end{figure}
 
-        In order to create this illusion of movement, the game must meet a target framerate. In the movie world, the industry standard is 24 frames per second. For video games, the targets are much higher. Most games aim to produce at least thirty frames per second, with many more games targetting sixty frames per second. Some video games are even building in support for even higher framerates that will allow users to play games on 120Hz or 140Hz monitors. \\
+        In order to create this illusion of movement, the game must meet a target frame rate. In the movie world, the industry standard is 24 frames per second. For video games, the targets are much higher. Most games aim to produce at least thirty frames per second, with many more games targeting sixty frames per second. Some video games are even building in support for even higher frame rates that will allow users to play games on 120Hz or 140Hz monitors. \\
 
-        In this sense, a video game can be thought of as a soft real-time system. A soft real-time system is a real-time system where meeting the deadline is desired, but not required. The consequences for missing the deadline in a soft real-time system are miniscule compared to the consequences for missing the deadline in a hard real-time system. For video games, this could be seen as missing the target framerate for a few frames. The goal is to keep the framerate close enough to the target so that the user never notices a performance dip. For example, if a game runs at 28 FPS rather than 30 FPS for a few seconds, the user may not even notice. But if a game runs at 15 FPS even for one second, the user will notice the strange delay and the illusion of movement will be ruined. Even then, the game is still playable, and most likely still enjoyable. A video game missing it's deadline is not catastrophic for the user experience, but too many missed deadlines and the player may start to notice. \\
-
-        REFINE THIS??? INCLUDE THIS
-        Not all video games may be considered as soft real-time systems. Many competetive games require tight controls and fast feedback loops for all players. In this sense, some games can be considered as hard real-time systems. If the game does not process the players input in time, or does not update the screen fast enough, the players may get frustrated and stop playing.
+        In this sense, a video game can be thought of as a soft real-time system. A soft real-time system is a real-time system where meeting the deadline is desired, but not required. The consequences for missing the deadline in a soft real-time system are miniscule compared to the consequences for missing the deadline in a hard real-time system. For video games, this could be seen as missing the target frame rate for a few frames. The goal is to keep the frame rate close enough to the target so that the user never notices a performance dip. For example, if a game runs at 28 FPS rather than 30 FPS for a few seconds, the user may not even notice. But if a game runs at 15 FPS even for one second, the user will notice the strange delay and the illusion of movement will be ruined. Even then, the game is still playable, and most likely still enjoyable. A video game missing it's deadline is not catastrophic for the user experience, but too many missed deadlines and the player may start to notice. \\
 
     \subsection{Current Video Game Technology}
-        talk about different physics engines, scheduling algorithms, running on multiple processors, etc...
 
         Different video games have different requirements when it comes to the game engine being run. A text based adventure game is perhaps the most simple example, requiring almost no deadlines whatsoever. A text based adventure game will need to read player inputs, and display text to the console. See Figure \ref{text_based_loop}.
         \\
 
         \begin{figure}[H]
-            \includegraphics[width=12cm]{text_based_loop.png}
+            \includegraphics[width=4cm]{text_based_loop.png}
             \centering
-            \caption{Text Based Game Loop}
+            \caption{Text based game loop.}
             \label{text_based_loop}
         \end{figure}
 
         On the opposite end of the spectrum, a first person shooter may require a much more complex game engine, having to render a 3D world with a sound engine, lighting engine, physics engine, and networking that allows multiple players to play in the same space. All of these components working together creates a very complicated game loop that must fulfill many deadlines. See Figure \ref{fps_game_loop}.
 
         \begin{figure}[H]
-            \includegraphics[width=12cm]{fps_loop.png}
+            \includegraphics[width=5cm]{fps_loop.png}
             \centering
-            \caption{First Person Shooter Game Loop}
+            \caption{First person shooter game loop.}
             \label{fps_game_loop}
         \end{figure}
-
-        talk about how multithreading can help the processor hereeeeee
 
         In order to improve performance, many video games split tasks between many processors. For example, a game engine may split out the rendering task into a process on it's own, and compute all other tasks in a separate thread. This will improve performance because at the same time as objects are being drawn to the screen, the physics engine can update and calculate the next locations for those objects. See Figure \ref{multithread_loop}.
 
         \begin{figure}[H]
-            \includegraphics[width=12cm]{multithread_loop.png}
+            \includegraphics[width=5cm]{multithread_loop.png}
             \centering
-            \caption{Multithreaded Game Loop}
+            \caption{Multithreaded game loop.}
             \label{multithread_loop}
         \end{figure}
 
 
 
 \section{Methodology}
-    \section{Psuedocode}
+    \subsection{Goals}
+
+        The goal of this project is to demonstrate the power of a game engine that allows the programmer to dynamically change priorities of tasks. A simple video game will accompany the engine to allow the scheduler to be tested. Experiments will be run on the simple game to see what differences are observed when changing the priorities of tasks. The results from these experiments will be documented and analyzed to determine the success of the project. \\
+
+    \subsection{Pseudocode}
         For the sake of simplicity, this project will use a more basic game loop model that only runs on a single processor. This project will process user inputs, update state variables, update physics objects, and then render the screen using a 2D renderer. See Figure \ref{my_loop}.
 
         \begin{figure}[H]
-            \includegraphics[width=12cm]{my_loop.png}
+            \includegraphics[width=4cm]{my_loop.png}
             \centering
-            \caption{Planned Game Loop}
+            \caption{Planned game loop for project.}
             \label{my_loop}
         \end{figure}
 
-        The Psuedocode for the program is as follows:
+        The Pseudocode for the program is as follows:
 
 \begin{lstlisting}
 main():
@@ -149,20 +146,40 @@ main():
     terminate()
 \end{lstlisting}
 
-    \section{Scheduler}
+    \subsection{Scheduler}
 
-        This program will attempt to test a new way of scheduling tasks, one that allows the programmer to change priorities on the fly. The main goal of this scheduler will be to allow the programmer to set priorities of each of the four main loop functions dynamically. For example, if the programmer knows that a certain section requires many physics calculation, he or she can assign the bulk of the run-time to the physics updater. This will in turn reduce the alloted run-time for each of the other processes in the main loop, reducing their accuracy while improving the accuracy of the physics updater.
+        This program will attempt to test a new way of scheduling tasks, one that allows the programmer to change priorities on the fly. The main goal of this scheduler will be to allow the programmer to set priorities of each of the four main loop functions dynamically. For example, if the programmer knows that a certain section requires many physics calculations, he or she can assign the bulk of the run-time to the physics updater. This will in turn reduce the allotted run-time for each of the other processes in the main loop, reducing their accuracy while improving the accuracy of the physics updater.
         \\
 
         The scheduler will execute the following procedure:
         \begin{enumerate}
-            \item{Designate a target framerate to always meet.}
-            \item{Calculate how long each main loop should last based on the given framerate.}
+            \item{Designate a target frame rate to always meet.}
+            \item{Calculate how long each main loop should last based on the given frame rate.}
             \item{Allow the programmer to assign priorities to each process.}
-            \item{Allow each process to run for a portion of the loop based on its priority. For example, if all 4 processes are given a priority of 2, each one would run for 25\% of the time alloted for the main loop. If updatePhysics() is given a priority of 4, and the others are all 2, updatePhysics() will run for 40\% of the loop while each other function will only run for 20\%.}
+            \item{Allow each process to run for a portion of the loop based on its priority.}
         \end{enumerate}
 
-        This project will demonstrate how a game engine can utilize the power of dynamically changing priorities on the fly. It will also show how allowing the program to specifiy different priorities at different points in the game will lead to a smoother game experience for the player. 
+        For example, if all 4 processes are given a priority of 2, each one would run for 25\% of the time allotted for the main loop. See Figure \ref{even_priority} for an example of this situation. 
+        
+        \begin{figure}[H]
+            \includegraphics[width=8cm]{even_priority.png}
+            \centering
+            \caption{Processing distribution with even priority.}
+            \label{even_priority}
+        \end{figure}
+
+        If updatePhysics() is given a priority of 4, and the others are all 2, updatePhysics() will run for 40\% of the loop while each other function will only run for 20\%. See Figure \ref{phys_priority} for an example of this.
+
+        \begin{figure}[H]
+            \includegraphics[width=8cm]{phys_priority.png}
+            \centering
+            \caption{Processing distribution that favors physics calculations}
+            \label{phys_priority}
+        \end{figure}
+
+\section{Conclusion}
+    Video Games are some of the most complicated real-time systems ever created. They must be able to process large amounts of data and produce an output for the user within a short period of time. This project will investigate the effects of allowing the programmer to dynamically change priorities of tasks on the fly. This project will show that given the power, the programmer can improve the gaming experience by allocating resources to specific areas at different times during the game.
+
 
 \newpage
 
