Remove appendices from midterm report

--- a/report/report.tex
+++ b/report/report.tex
@@ -211,12 +211,12 @@ main():
 
 \newpage
 
-\begin{appendices}
+%\begin{appendices}
 
-\section{main.c}
+%\section{main.c}
 %    \inputminted{c}{../main.c}
 
-\end{appendices}
+%\end{appendices}
 
 \end{document}
 
